<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityRegister">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="165dp"
        android:layout_height="176dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/__5"
        app:civ_border_color="#AF4D7C"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="416dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="220dp">
        <Button
            android:id="@+id/login"
            android:layout_width="202dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/si"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sign"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/register"
            android:textColor="#AF4D7C"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/rtgister"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:backgroundTint="#DCA7C5"
            android:text="@string/register2"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="325dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/editTextPhone"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/samiraa"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editTextPhone2"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/bagish"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPhone3"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/samiro4ka_cool_gmail_com2" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/number" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/_12345"
            android:autofillHints="Number"
            tools:ignore="LabelFor"/>

        <LinearLayout
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forpass"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>