<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCode">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mypro"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinerLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="520dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/samira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/samira"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/samiro4ka_cool_gmail_com"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="8dp"
            android:text="@string/adress"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView10" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/update"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:backgroundTint="#DCA7C5"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Avatar"
        android:layout_width="119dp"
        android:layout_height="113dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="563dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="130dp"
            android:layout_height="153dp"
            app:srcCompat="@drawable/__5" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="203dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Avatar">

        <androidx.cardview.widget.CardView
            android:layout_width="267dp"
            android:layout_height="76dp"
            app:cardCornerRadius="70dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                app:backgroundTint="#DCA7C5"
                app:srcCompat="@android:drawable/radiobutton_off_background" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="25dp"
                android:text="@string/code"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="267dp"
            android:layout_height="76dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="70dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                app:backgroundTint="#DCA7C5"
                app:srcCompat="@android:drawable/radiobutton_off_background" />

            <TextView
                android:id="@+id/sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="25dp"
                android:text="@string/sms"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>