<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPage">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myyyprof"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="355dp"
        android:layout_height="163dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/Avatar"
            android:layout_width="119dp"
            android:layout_height="113dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="153dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/__5" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/LinerLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/samiraaa"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/samiro4ka_cool_gmail_com3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="8dp"
                android:text="@string/_29"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView10" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="342dp"
        android:layout_height="389dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="316dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/basket"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/next" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="316dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">


            <TextView
                android:id="@+id/secret"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Поиск"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/next" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="316dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Способ оплаты"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/quee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/next" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="316dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">


            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Хиты"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/next" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="290dp"
            android:layout_height="80dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/update"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:backgroundTint="#DCA7C5"
                android:text="@string/updateee"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>