<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPlayment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="355dp"
        android:layout_height="163dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/LinerLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/samiraaa"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/samiro4ka_cool_gmail_com3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="8dp"
                android:text="@string/_29"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView10" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/Avatar"
            android:layout_width="119dp"
            android:layout_height="113dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="153dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/__5" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="303dp"
        android:layout_height="149dp"
        android:layout_marginBottom="152dp"
        android:orientation="horizontal"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/component_16_2" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/component_17" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="100dp"
            android:text="Mobile Money (Элсом)"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="30dp"
            android:text="Card"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/update"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:backgroundTint="#DCA7C5"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="217dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="Способ оплаты"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

</androidx.constraintlayout.widget.ConstraintLayout>